@@ -983,7 +983,9 @@ void snort_thread_term()
 #ifdef PPM_MGR
     ppm_sum_stats();
 #endif
-    InspectorManager::thread_stop(snort_conf);
+    if ( !snort_conf->dirty_pig )
+        InspectorManager::thread_stop(snort_conf);
+
     ModuleManager::accumulate(snort_conf);
     InspectorManager::thread_term(snort_conf);
     ActionManager::thread_term(snort_conf);
@@ -1002,10 +1004,6 @@ void snort_thread_term()
         DAQ_Stop();
 
     DAQ_Delete();
-
-    // FIXIT-L this is kinda squiffy for multithreads
-    if ( snort_conf->dirty_pig )
-        return;
 
 #ifdef PERF_PROFILING
     ReleaseProfileStats();
